apps/media/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer
spec:
  ingressClassName: cilium
  rules:
    - host: plex.vanillax.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: web
  tls:
    - secretName: jellyfin-ingress-tls
      hosts:
        - jellyfin.vanillax.me
